k8s/overlays/local/patches/frontend-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-service-frontend
spec:
  replicas: 1
